[package]
name = "rp-pico-usb-dac"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
fugit = "0.3.7"
panic-halt = "1.0.0"
pio = "0.2.1"
pio-proc = "0.2.2"
rp-pico = "0.9.0"
rtic = { version = "2.1.2", features = [ "thumbv6-backend" ] }
rtic-monotonics = { version = "2.0.3", features = [ "rp2040" ] }
rtic-sync = "1.3.0"
usb-device = { version = "0.3.2", features = [ "control-buffer-256" ] }
usbd-audio = { path = "./usbd-audio" }
portable-atomic = { version = "1", features = ["critical-section"] }
panic-probe = "0.3.2"

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = 3
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = "fat"       # better optimzations

[features]
default = ["rp-pico/disable-intrinsics"]
